chandeliers-lus/tests/compile_fail/ui/tc/extern/wrong-in-node.stderr
error[E0308]: mismatched types
   --> tests/compile_fail/ui/tc/extern/wrong-in-node.rs:14:32
    |
14  |     extern node wrong_step_sig() returns (f: float);
    |                 -------------- ^ expected `Nillable<i64>`, found `Nillable<()>`
    |                 |
    |                 arguments to this method are incorrect
    |
    = note: expected enum `Nillable<i64>`
               found enum `Nillable<()>`
note: method defined here
   --> /home/nash/School/Mpri/projects/chandeliers/chandeliers-sem/src/stepping.rs:152:8
    |
152 |     fn step(&mut self, input: <Self::Input as Embed>::Target) -> <Self::Output as Embed>::Target;
    |        ^^^^
